@@ -2,10 +2,9 @@ package com.example.user_service.service;
 
 import com.example.user_service.models.Usermodel;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class UserPrinciple implements UserDetails {
@@ -18,7 +17,7 @@ public class UserPrinciple implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + this.usermodel.getRole().toString()));
     }
 
     @Override
